--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+ <link rel="shortcut icon" href="./public/SnapMobLogo.png" type="image/x-icon">
   <meta name="description" content="SnapMob - Get the best deals on smartphones">
   <meta property="og:title" content="SnapMob | Premium Mobile Phones">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Snap Mob | Phones | iPhone | Realme | Redmi | Pixel</title>
 </head>
 
 <body>
